# boilerplate.py

./: .config.env  .dockerignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  main.py  pyproject.toml
boilerplate/: app.py  settings.py
